--- a/reviews/templates/reviews.html
+++ b/reviews/templates/reviews.html
@@ -44,7 +44,7 @@
         </div>
         {% endfor %}
         {% else %}
-        <p class="ha">No reviews have been found.</p>
+        <p class="vh">No reviews have been found.</p>
         {% endif %}
 </div>
 {% endblock %}
