--- a/static/scss/_partials/portrait-mobile/_portrait-mobile.scss
+++ b/static/scss/_partials/portrait-mobile/_portrait-mobile.scss
@@ -31,6 +31,12 @@
         color: white;
     }
 
+    .form-group>p {
+        text-align: center;
+        font-size: 6.0vw;
+        color: black;
+    }
+
     // footer {
     //     margin-top: 40px;
     //     padding-top: 20px;
