--- a/static/scss/_partials/portrait-mobile/pages/_password-reset-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_password-reset-page.scss
@@ -1,6 +1,8 @@
 .password-reset-wrapper {
     height: 70vh;
     align-content: center;
+    background-color: #9e988fcb;
+    min-height: 92vh;
 }
 
 .accountform {
@@ -16,7 +18,7 @@
 
 #password-reset-label {
     padding-right: 5px;
-    width: 50%;
+    width: 35%;
 }
 
 .passwordresetform {
