--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -6,82 +6,79 @@
 {% block content %}
 
 <div class="product-wrapper ha">
-    <div class="page-headline ha">Daily fresh apples!</div>
-        <div class="search-field-wrapper ha">
-            <div class="display">
-                <form action="{% url 'product_search' %}" method="GET">
-                    <input type="text" name="q">
-                    <button type="submit">Search</button>
-                </form>
-            </div>
+    <div class="page-headline ha">Daily fresh apples, please choose!</div>
+    <div class="search-field-wrapper ha">
+        <div class="display">
+            <form action="{% url 'product_search' %}" method="GET">
+                <input type="text" name="q">
+                <button type="submit">Search</button>
+            </form>
         </div>
+    </div>
 
 
-        {% if products %}
-        {% for product in products %}
+    {% if products %}
+    {% for product in products %}
 
-        <div class="productcard display panel panel-default">
-            <div class="panel-body">
-                <img class="product-image" src="{{ MEDIA_URL }}{{product.image}}" alt="image of {{product.name}}">
-                <div class="btn-bar-wrapper">
-                    {% if product.id in wishlist %}
-                    <form class="wishform" method="POST"
-                        action="{% url 'remove_from_wishlist' product.id %}">
-                        {% csrf_token %}
-                            <button class="remove-wish-btn" type="submit"><i class="fa fa-star staricon-added"></i></button>
-                    </form>
-                    {% else %}
-                    <form class="wishform" method="POST"
-                        action="{% url 'add_to_wishlist' product.id %}">
-                        {% csrf_token %}
-                            <button class="add-wish-btn" type="submit"><i class="fa fa-star staricon-not-added"></i></button>
-                    </form>
-                    {% endif %}
-    
-                    {% if product.name in purchased_products %}
-                    <form class="revform" method="POST" action="{% url 'new_review' product.id %}">
-                        {% csrf_token %}
-                            <button class="add-review-btn" type="submit"><i class="fa fa-comment"></i></button>
-                    </form>
-                    {% endif %}
-                </div>
-                <h3><a class="product-headline" href="{% url 'product_detail' product.id %}"><b>{{product.name}}</b></a>
-                </h3>
-
-                <p class="product-description">{{ product.description|truncatewords:12 }}</p>
-                <div class="product-stats">
-                    <div class="stats-key"><i class="fa fa-eye"></i></div>
-                    <div class="stats-value">{{ product.view_count }}</div>
-                    <div class="stats-key"><i class="fa fa-comment"></i></div>
-                    {% if product.review_count > 0 %}
-                    <div class="stats-value">
-                        <a href="{% url 'get_reviews' product.id %}">{{ product.review_count }}</a>
-                    </div>
-                    {% else %}
-                    <div class="stats-value">{{ product.review_count }}</div>
-                    {% endif %}
-                    <div class="stats-key">Sold:</div>
-                    <div class="stats-value">{{ product.ordered_pcs }}</div>
-                </div>
-                <br>
-                <p class="price"><b>Our price: {{ product.price }} EUR</b></p>
-                <form class="cart-form" method="POST" action="{% url 'add_to_cart' product.id %}">
+    <div class="productcard display panel panel-default">
+        <div class="panel-body">
+            <img class="product-image" src="{{ MEDIA_URL }}{{product.image}}" alt="image of {{product.name}}">
+            <div class="btn-bar-wrapper">
+                {% if product.id in wishlist %}
+                <form class="wishform" method="POST" action="{% url 'remove_from_wishlist' product.id %}">
                     {% csrf_token %}
-                    <div class="input-group">
-                        <input name="quantity" type="number" min="1" max="999" class="form-control"
-                            placeholder="Quantity">
-                        <span class="input-group-btn">
-                            <button class="btn btn-success" type="submit"><i
-                                    class="fa fa-shopping-cart addcard-icon"></i></button>
-                        </span>
-                    </div>
+                    <button class="remove-wish-btn" type="submit"><i class="fa fa-star staricon-added"></i></button>
                 </form>
+                {% else %}
+                <form class="wishform" method="POST" action="{% url 'add_to_wishlist' product.id %}">
+                    {% csrf_token %}
+                    <button class="add-wish-btn" type="submit"><i class="fa fa-star staricon-not-added"></i></button>
+                </form>
+                {% endif %}
+
+                {% if product.name in purchased_products %}
+                <form class="revform" method="POST" action="{% url 'new_review' product.id %}">
+                    {% csrf_token %}
+                    <button class="add-review-btn" type="submit"><i class="fa fa-comment"></i></button>
+                </form>
+                {% endif %}
             </div>
+            <h3><a class="product-headline" href="{% url 'product_detail' product.id %}"><b>{{product.name}}</b></a>
+            </h3>
+
+            <p class="product-description">{{ product.description|truncatewords:12 }}</p>
+            <div class="product-stats">
+                <div class="stats-key"><i class="fa fa-eye"></i></div>
+                <div class="stats-value">{{ product.view_count }}</div>
+                <div class="stats-key"><i class="fa fa-comment"></i></div>
+                {% if product.review_count > 0 %}
+                <div class="stats-value">
+                    <a href="{% url 'get_reviews' product.id %}">{{ product.review_count }}</a>
+                </div>
+                {% else %}
+                <div class="stats-value">{{ product.review_count }}</div>
+                {% endif %}
+                <div class="stats-key">Sold:</div>
+                <div class="stats-value">{{ product.ordered_pcs }}</div>
+                <div class="stats-key price"><b>Our price:</b></div>
+                <div class="stats-value price"><b>{{ product.price }} EUR</b></div>
+            </div>
+            <form class="cart-form" method="POST" action="{% url 'add_to_cart' product.id %}">
+                {% csrf_token %}
+                <div class="input-group">
+                    <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity">
+                    <span class="input-group-btn">
+                        <button class="btn btn-success" type="submit"><i
+                                class="fa fa-shopping-cart addcard-icon"></i></button>
+                    </span>
+                </div>
+            </form>
         </div>
-        {% endfor %}
-        {% else %}
-        <p>No results have been found.</p>
-        {% endif %}
+    </div>
+    {% endfor %}
+    {% else %}
+    <p>No results have been found.</p>
+    {% endif %}
 </div>
 
 {% endblock %}
