--- a/static/scss/_partials/landscape-desktop/_landscape-desktop.scss
+++ b/static/scss/_partials/landscape-desktop/_landscape-desktop.scss
@@ -15,18 +15,19 @@
     body {
         font-family: $dosisFont;
         padding-top: 56px;
-        font-size: 1.5vw;
+        font-size: 1.2vw;
     }
 
     .page-headline {
         font-family: $dosisFont;
         font-size: 2.5vw;
+
         padding: {
             top: 1vw;
-            bottom: 2vw;
+            bottom: 1vw;
 
         }
-    
+
         width: 100%;
         color: white;
     }
@@ -36,13 +37,13 @@
         width: 100%;
     }
 
-    .form-group > .input-group {
+    .form-group>.input-group {
         width: 100%;
     }
 
-    .form-group > p {
+    .form-group>p {
         text-align: center;
-        font-size: 2.5vw;
+        font-size: 2.0vw;
     }
 
     // footer {
@@ -161,10 +162,14 @@
     }
 
     .btn-bar-wrapper {
-        width: 8vw;
-        display: block;
-        text-align: right;
+        width: 5vw;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-end;
+        align-content: baseline;
     }
+
+
 
 
     // bottom linkbar
