--- a/static/scss/_partials/landscape-desktop/pages/_checkout-page.scss
+++ b/static/scss/_partials/landscape-desktop/pages/_checkout-page.scss
@@ -1,7 +1,8 @@
 .checkout-wrapper {
     padding-bottom: 2vw;
     background-color: #9e988fcb;
-    min-height: 92vh;}
+    min-height: 92vh;
+}
 
 caption p {
     word-wrap: break-word;
@@ -27,7 +28,7 @@ caption p {
     width: 100%;
     color: white;
     text-align: center;
-    font-size: 3.0vw;
+    font-size: 2.0vw;
 }
 
 #payment-form {
@@ -38,7 +39,11 @@ caption p {
 #submit_payment_btn {
     display: flex;
     justify-content: center;
-    width: 16vw;
-    font-size: 2.0vw;
+    width: 12vw;
+    font-size: 1.5vw;
+    transition: color .3s ease-in-out;
+}
 
+#submit_payment_btn:hover {
+    color: darkred;
 }
