--- a/static/scss/_partials/portrait-mobile/pages/_products-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_products-page.scss
@@ -5,6 +5,7 @@
 
     }
     background-color: #9e988fcb;
+    min-height: 92vh;
 }
 
 .search-field-wrapper {
@@ -64,11 +65,11 @@ h3 .product-headline {
 }
 
 .stats-key {
-    width: 21vw;
+    width: 23%;
 }
 
 .stats-value {
-    width: 52vw;
+    width: 75%;
     ;
 }
 
@@ -77,7 +78,7 @@ h3 .product-headline {
 }
 
 .price {
-    width: 100%;
+    margin-top: 5px;
 }
 
 .cart-form {
