--- a/static/scss/_partials/portrait-mobile/pages/_register-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_register-page.scss
@@ -3,6 +3,7 @@
     flex-wrap: wrap;
     width: 100%;
     padding-bottom: 20vw;
+    background-color: #9e988fcb;
 }
 
 #registration-message {
@@ -15,6 +16,10 @@
 
 #registrationform {
     width: 90vw;
+}
+
+.help-block {
+    color: red;
 }
 
 #submit-registration-btn-wrapper {
