added breakpoint landscape ipad and vertically aligned content on all pages

--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<div class="login-wrapper ha">
+<div class="login-wrapper vac ha">
 
     <div class="page-headline ha">
         Login
