--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="checkout-wrapper ha">
+<div class="checkout-wrapper vac ha">
     <div class="page-headline ha">
         Checkout with payment
     </div>
