--- a/home/templates/bestsellers.html
+++ b/home/templates/bestsellers.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="product-wrapper ha">
+<div class="product-wrapper vac ha">
     <div class="page-headline ha">Our bestsellers</div>
 
     {% if products %}
