--- a/reviews/templates/editreview.html
+++ b/reviews/templates/editreview.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load bootstrap_tags %}
 {% block content %}
-<div class="edit-review-wrapper ha">
+<div class="edit-review-wrapper vac ha">
     <div class="review-headline">Add a new or edit Review</div>
     <form id="review-form" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
