--- a/reviews/templates/reviewsproduct.html
+++ b/reviews/templates/reviewsproduct.html
@@ -4,20 +4,19 @@
 {% block head_js %}
 {% endblock head_js %}
 {% block content %}
-<div class="reviews-wrapper ha">
+<div class="reviews-wrapper vac ha">
     <div class="page-headline ha">Reviews per Product</div>
         {% if reviews %}
         {% for review in reviews %}
         <div class="reviewcard display panel panel-default">
             <div class="panel-body">
-                <h3 class="review-headline ha"><a href="{% url 'review_detail' review.id %}">{{ review.title }}</a></h3>
                 {% if review.image %}
                 <img class="product-image" src="{{ MEDIA_URL }}{{review.image}}"
                     alt="image of {{review.product.name}} review">
                 {% endif %}
 
                 <h3>
-                    <div class="product-headline"><b>Review for {{review.product.name}}</b></div>
+                    <div class="review-headline"><b>Review for {{review.product.name}}</b></div>
                 </h3>
                 <p></p>
                 <p class="product-description">{{ review.comment|truncatewords:10 }}</p>
