--- a/static/scss/_partials/portrait-ipad/pages/_login-page.scss
+++ b/static/scss/_partials/portrait-ipad/pages/_login-page.scss
@@ -1,7 +1,7 @@
 .login-wrapper {
     align-content: center;
     padding-bottom: 25vw;
-    background-color: #9e988fcb;
+    background-color: $page-bgr-clr;
     min-height: 85vh;
 }
 
