--- a/static/scss/_partials/portrait-mobile/pages/_register-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_register-page.scss
@@ -3,7 +3,7 @@
     flex-wrap: wrap;
     width: 100%;
     padding-bottom: 20vw;
-    background-color: #9e988fcb;
+    background-color: $page-bgr-clr;
 }
 
 #registration-message {
@@ -12,6 +12,7 @@
         top: 4vw;
         bottom: 4vw;
     }
+    color: white;
 }
 
 #registrationform {
