--- a/static/scss/_partials/portrait-mobile/pages/_reviews-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_reviews-page.scss
@@ -1,7 +1,7 @@
 .reviews-wrapper {
     padding-top: 5vw;
     padding-bottom: 20vw;
-    background-color: #9e988fcb;
+    background-color: $page-bgr-clr;
     min-height: 92vh;
 }
 
