--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -2,7 +2,7 @@
 {% block title %}Reset Password{% endblock %}
 
 {% block content %}
-<div class="password-reset-wrapper ha">
+<div class="password-reset-wrapper vac ha">
     <div class="page-headline ha">Password reset</div>
 
     <form method="post" class="accountform ha">
