--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<div class="profile-wrapper">
+<div class="profile-wrapper vac ha">
 
     <!-- Nav tabs -->
     <ul class="nav nav-tabs ha" role="tablist">
