--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -4,7 +4,7 @@
 {% block page_heading %}User Registration{% endblock %}
 
 {% block content %}
-<div class="registration-wrapper ha">
+<div class="registration-wrapper vac ha">
     <div class="page-headline ha">Registration</div>
     <div id="registration-message">If you have already an account, you can sign in <a
             href="{% url 'login' %}">here</a></div>
