--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -8,7 +8,7 @@
 {% endblock head_js %}
 
 {% block content %}
-<div class="cart-wrapper ha">
+<div class="cart-wrapper vac ha">
     <div class="page-headline ha">
         Your cart
     </div>
