--- a/products/templates/productdetail.html
+++ b/products/templates/productdetail.html
@@ -5,7 +5,7 @@
 {% endblock head_js %}
 {% block content %}
 
-<div class="product-wrapper ha">
+<div class="product-wrapper vac ha">
     <div class="page-headline ha">Product details</div>
     <div class="productcard display panel panel-default">
         <div class="panel-body">
