--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -5,7 +5,7 @@
 {% endblock head_js %}
 {% block content %}
 
-<div class="product-wrapper ha">
+<div class="product-wrapper vac ha">
     <div class="page-headline ha">Daily fresh apples, please choose!</div>
     <div class="search-field-wrapper ha">
         <div class="display">
