--- a/static/scss/_partials/landscape-desktop/pages/_profile-page.scss
+++ b/static/scss/_partials/landscape-desktop/pages/_profile-page.scss
@@ -5,7 +5,7 @@
 
     }
 
-    background-color: #9e988fcb;
+    background-color: $page-bgr-clr;
     min-height: 92vh;
 }
 
@@ -93,7 +93,7 @@
 
 .update-address-btn {
     font-family: $dosisFont;
-    font-size: 2.0vw;
+    font-size: 1.5vw;
     font-weight: 900;
     margin-top: 2vw;
     background-color: lightblue;
