--- a/static/scss/_partials/landscape-desktop/pages/_reviews-page.scss
+++ b/static/scss/_partials/landscape-desktop/pages/_reviews-page.scss
@@ -3,7 +3,7 @@
         bottom: 2vw;
     }
 
-    background-color: #9e988fcb;
+    background-color: $page-bgr-clr;
     min-height: 92vh;
 }
 
@@ -24,7 +24,7 @@
     padding-bottom: 2vw;
     min-height: 82vh;
     padding-top: 2vw;
-    background-color: #9e988fcb;
+    background-color: $page-bgr-clr;
 }
 
 #review-form {
@@ -138,7 +138,6 @@ return-product-btn:hover {
     font-size: 2.0vw;
     margin-bottom: 2vw;
     width: 100%;
-    text-align: center;
 }
 
 .review-headline a {
