--- a/static/scss/_partials/landscape-ipad/pages/_password-reset-page.scss
+++ b/static/scss/_partials/landscape-ipad/pages/_password-reset-page.scss
@@ -10,6 +10,11 @@
     padding-top: 20px;
 }
 
+.accountform p {
+    color: white;
+}
+
+
 .emailfield-resetform-wrapper {
     display: flex;
     flex-wrap: wrap;
@@ -19,6 +24,7 @@
 #password-reset-label {
     padding-right: 5px;
     width: 50%;
+    color: white;
 }
 
 .passwordresetform {
