--- a/static/scss/_partials/portrait-ipad/pages/_password-reset-page.scss
+++ b/static/scss/_partials/portrait-ipad/pages/_password-reset-page.scss
@@ -1,7 +1,7 @@
 .password-reset-wrapper {
     height: 70vh;
     align-content: center;
-    background-color: #9e988fcb;
+    background-color: $page-bgr-clr;
 }
 
 .accountform {
