--- a/static/scss/_partials/portrait-mobile/pages/_profile-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_profile-page.scss
@@ -1,6 +1,6 @@
 .profile-wrapper {
     padding-bottom: 25vw;
-    background-color: #9e988fcb;
+    background-color: $page-bgr-clr;
     min-height: 85vh;
 }
 
