--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -5,7 +5,7 @@
 {% endblock head_js %}
 {% block content %}
 
-<div class="wishlist-wrapper ha">
+<div class="wishlist-wrapper vac ha">
     <div class="page-headline ha">Your apples wishlist</div>
     {% if wishlist_items %}
     {% for item in wishlist_items %}
